...
          )
        }
      }
    },
    modifier =
      Modifier
        .testTag("libraryScreen")
        .systemBarsPadding()
        .fillMaxSize(),
    content = { innerPadding ->
      Box(
        modifier =
          Modifier
...

        LazyVerticalGrid(
          columns = GridCells.Fixed(1),
          state = libraryListState,
          modifier =
            Modifier
              .testTag("libraryGrid")
              .fillMaxSize()
              .imePadding()
              .withScrollbar(
                state = libraryListState,
                color = colorScheme.onBackground.copy(alpha = scrollbarAlpha),
                totalItems = libraryCount,
...
