...
    <string name="app_name" translatable="false">Lissen</string>
    <string name="a11y_back">Back</string>
    <string name="a11y_menu">Menu</string>
    <string name="a11y_search">Search</string>
    <string name="a11y_clear">Clear</string>
    <string name="a11y_add">Add</string>
    <string name="a11y_settings">Settings</string>
...
    <string name="show_downloaded_content_only">Downloaded only</string>
    <string name="library_quick_settings_grouping_title">Grouping</string>
    <string name="library_grouping_disabled">Disabled</string>
    <string name="library_grouping_series">By Series</string>
    <string name="library_grouping_author">By Author</string>
...
    </plurals>
    <string name="timer_option_disable_timer">Disable Timer</string>
    <string name="timer_title">Sleep Timer</string>
    <string name="player_screen_timer_navigation">Timer</string>
    <string name="chapter_search_hint">Search by chapter title</string>
...
    <string name="settings_screen_seek_time_title">Seek settings</string>
    <string name="settings_screen_seek_time_hint">Define seek controls</string>
    <string name="settings_screen_default_sleep_timer_title">Default sleep timer while playing</string>
    <string name="sleep_timer_settings_title">Timer settings</string>
    <string name="sleep_timer_settings_description">Configure timer controls</string>
    <string name="sleep_timer_fade_title">Fade out</string>
    <string name="sleep_timer_fade_disabled">Disabled</string>
    <string name="rewind_interval">Rewind interval</string>
...
    <string name="settings_screen_cached_items_hint">Manage saved content</string>
    <string name="volume_boost_disabled">Disabled</string>
    <string name="volume_boost_title">Boosted volume</string>
    <string name="settings_screen_equalizer_title">Equalizer</string>
    <string name="settings_screen_equalizer_enabled">Enabled</string>
    <string name="settings_screen_equalizer_disabled">Disabled</string>
    <string name="equalizer_restore_default">Restore default</string>
    <string name="a11y_equalizer_band">%s hertz band</string>
    <string name="a11y_equalizer_restore">Restore equalizer defaults</string>
    <string name="playing_item_details_time_remaining">Time remaining</string>
    <string name="playback_preferences_title">Playback</string>
    <string name="playback_preferences_description">Volume, seek controls, and audio</string>
    <string name="appearance_preferences_title">Appearance</string>
    <string name="appearance_preferences_description">Color scheme, sorting, and theme</string>
    <string name="settings_screen_advanced_preferences_title">Advanced</string>
    <string name="settings_screen_advanced_preferences_description">Diagnostics, logging, and other options</string>
    <string name="settings_screen_crash_report_title">Crash reporting</string>
...
    <string name="local_network_permission_request_hint">The app needs local network access to connect to nearby servers</string>
    <string name="permission_request_grant_button">Allow</string>
    <string name="settings_screen_clear_thumbnail_cache_title">Clear thumbnail cache</string>
    <string name="settings_screen_clear_thumbnail_cache_hint">Remove cached thumbnails to free up space</string>
    <string name="settings_screen_clear_thumbnail_cache_success_toast">Thumbnail cache cleared</string>
...
    <string name="bookmarks_title">Bookmarks</string>
    <string name="hide_completed_items">Hide finished</string>
    <string name="application_settings">Application settings</string>
    <string name="tree_node_recent">Recent</string>
    <string name="tree_node_library">Library</string>
...
    <string name="tree_node_authors">Authors</string>
    <string name="tree_node_series">Series</string>
    <string name="connection_settings_title">Connection</string>
    <string name="connection_settings_description">Server address, proxy, and SSL</string>
    <string name="disconnect_from_server_title">Disconnect from the server</string>
    <string name="disconnect_from_server_confirmation_message">You\'ll be disconnected from the server on this device. Your data will not be affected</string>
    <string name="disconnect_from_server_confirm">Disconnect</string>
    <string name="settings_screen_activity_logging_title">Activity Logging</string>
    <string name="settings_screen_activity_logging_description">Record diagnostic events to a local file</string>
...
    <string name="export_logs_description">Share diagnostic data for troubleshooting</string>
    <string name="export_logs_no_logs">No logs available</string>
    <string name="settings_screen_user_agent_title">Change User Agent</string>
    <string name="settings_screen_user_agent_hint">Customize the application User-Agent header</string>
    <string name="settings_screen_user_agent_restore_default">Restore Default</string>
    <string name="config_backup_title">Backup &amp; Restore</string>
    <string name="config_backup_description">Export or import your app preferences</string>
...
