...
        title = stringResource(R.string.settings_screen_title),
        onBack = onBack,
      )
    },
    modifier =
      Modifier
        .testTag("settingsScreen")
        .systemBarsPadding()
        .fillMaxHeight(),
    content = { innerPadding ->
      Column(
        modifier =
          Modifier
...
