...
    scrollable = false,
    onDismissRequest = onDismissRequest,
  ) {
    Column(
      modifier =
        Modifier
          .testTag("librarySettingsSheet")
          .fillMaxWidth()
          .verticalScroll(rememberScrollState()),
    ) {
      SettingsToggleRow(
        title = stringResource(R.string.show_downloaded_content_only),
        icon = Icons.Outlined.CloudOff,
...
