...
    ),
    Book(
      "2",
      "Dune",
      "Frank Herbert",
      listOf(
        Chapter("1", "Arrakis", "15:20", "8.4 МБ"),
        Chapter("2", "Muad'Dib", "13:10", "7.9 МБ"),
      ),
    ),
    Book(
      "3",
      "1984",
...
